# SMLKit

./: README.md  pyproject.toml  smlkit.py
src/pages/: __init__.py  question_1.py
src/utils/: ProjectType.py  config.py
src/utils/builder/: __init__.py  _actions.py  _builder.py  _interfaces.py
tests/: test_actions.py  test_builder.py  test_config.py
