[project]
name = "smlkit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.10.2",
    "textual>=5.2.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "textual-dev>=1.7.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]
skip-string-normalization = true
